--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,4 +13,8 @@
 
     <h1>Welcome to todo list application!</h1>
     <h5>Built with angular 17</h5>
+
+    <footer>
+        @kasturi thullu
+    </footer>
 </div>
