--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,9 @@
     <h1>Welcome to todo list application!</h1>
     <h5>Built with angular 17</h5>
 
-    <footer>
-        @kasturi thullu
-    </footer>
+    <div class="footer">
+        <footer>
+            @kasturi thullu
+        </footer>
+    </div>
 </div>
