--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,9 @@
     <div class="header">
         <div class="nav">
             <ul>
-                <li>home</li>
-                <li>contact us</li>
-                <li>about us</li>
+                <li><a href="/">home</a></li>
+                <li><a href="/">contact us</a></li>
+                <li><a href="/">about us</a></li>
             </ul>
         </div>
     </div>
