--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
         <div class="nav">
             <ul>
                 <li><a href="/">home</a></li>
-                <li><a href="/">contact us</a></li>
-                <li><a href="/">about us</a></li>
+                <li><a href="/contact">contact us</a></li>
+                <li><a href="/about">about us</a></li>
             </ul>
         </div>
     </div>
