--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,20 @@
 <!-- <app-todolist></app-todolist> -->
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+
+<div class="container">
+    <div class="header">
+        <div class="nav">
+            <ul>
+                <li><a href="/">home</a></li>
+                <li><a href="/contact">contact us</a></li>
+                <li><a href="/about">about us</a></li>
+            </ul>
+        </div>
+    </div>
+    <router-outlet></router-outlet>
+    <div class="footer">
+        <footer>
+            @kasturi thullu
+        </footer>
+    </div>
+</div>
