--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
     <router-outlet></router-outlet>
     <div class="footer">
         <footer>
-            @kasturi thullu
+            @kasturi
         </footer>
     </div>
 </div>
