--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,7 @@
 
     <h1>Welcome to todo list application!</h1>
     <h5>Built with angular 17</h5>
+    <button (click)="navigateToContact()">manage task</button>
     <!-- <router-outlet></router-outlet> -->
     <!-- <div class="footer">
         <footer>
