--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,29 @@
-<p>contact works!</p>
+<form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="name">Name</label>
+      <input type="text" formControlName="name" class="form-control" />
+      <div *ngIf="contactForm.get('name')?.invalid && contactForm.get('name')?.touched" class="error-message">
+        Name is required
+      </div>
+    </div>
+  
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" formControlName="email" class="form-control" />
+      <div *ngIf="contactForm.get('email')?.invalid && contactForm.get('email')?.touched" class="error-message">
+        Email is required and must be a valid email address
+      </div>
+    </div>
+  
+    <div class="form-group">
+      <label for="message">Message</label>
+      <textarea formControlName="message" class="form-control"></textarea>
+    </div>
+  
+    <button type="submit" [disabled]="contactForm.invalid" class="btn btn-primary">Submit</button>
+    <div *ngIf="showSuccess" class="success-message">
+        <p>Your response is sent</p>
+        <img src="/src/assets/img/todo.svg" alt="Write Mark">
+    </div>
+</form>
+  
