contact us page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,10 @@
-<p>about works!</p>
+<div class="wrap">
+    <div class="container">
+        <h1>About Us</h1>
+        <p>Welcome to our To-Do List App! We are a team of developers passionate about productivity and organization. Our goal is to provide you with a simple yet powerful tool to manage your tasks effectively.</p>
+        <p>With our app, you can create, edit, and delete tasks with ease. You can also organize your tasks into categories, set deadlines, and mark tasks as completed.</p>
+        <p>We are constantly working to improve our app and add new features based on your feedback. Thank you for using our To-Do List App!</p>
+    </div>
+</div>
+
+  
