--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -16,3 +16,30 @@
     margin-left: 5px;
   }
   
+
+
+  .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 600px;
+    width: 600px;
+  }
+
+  .form-group{
+    padding-top: 30px;
+  }
+
+  .form-group label{
+    padding-bottom: 10px;
+    font-weight: 600;
+    font-size: large;
+  }
+
+  .form-group input{
+    height: 40px;
+  }
+
+  button{
+    margin-top: 20px;
+  }
